[ci skip] Updates

--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
 					<li class=" tsd-kind-class">
 						<a href="classes/lxd.html" class="tsd-kind-icon">Lxd</a>
 					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/profileservice.html" class="tsd-kind-icon">Profile<wbr>Service</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/profile.html" class="tsd-kind-icon">Profile</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/project.html" class="tsd-kind-icon">Project</a>
+					</li>
 					<li class=" tsd-kind-variable">
 						<a href="globals.html#api_base_url" class="tsd-kind-icon">API_<wbr>BASE_<wbr>URL</a>
 					</li>
@@ -128,6 +137,10 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
 				<li class="tsd-kind-property tsd-parent-kind-class"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 		</div>
 	</div>
