--- a/globals.html
+++ b/globals.html
@@ -69,6 +69,14 @@
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-class"><a href="classes/lxd.html" class="tsd-kind-icon">Lxd</a></li>
+								<li class="tsd-kind-class"><a href="classes/profileservice.html" class="tsd-kind-icon">Profile<wbr>Service</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section ">
+							<h3>Interfaces</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-interface"><a href="interfaces/profile.html" class="tsd-kind-icon">Profile</a></li>
+								<li class="tsd-kind-interface"><a href="interfaces/project.html" class="tsd-kind-icon">Project</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -91,7 +99,7 @@
 					<div class="tsd-signature tsd-kind-icon">API_<wbr>BASE_<wbr>URL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &#x60;${scheme}://${host}:${port}/${version}&#x60;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/ee6b80a/src/lib/conf/environment.ts#L10">lib/conf/environment.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/conf/environment.ts#L10">lib/conf/environment.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -101,7 +109,7 @@
 					<div class="tsd-signature tsd-kind-icon">host<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"127.0.0.1"</span><span class="tsd-signature-symbol"> = &quot;127.0.0.1&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/ee6b80a/src/lib/conf/environment.ts#L8">lib/conf/environment.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/conf/environment.ts#L8">lib/conf/environment.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -111,7 +119,7 @@
 					<div class="tsd-signature tsd-kind-icon">port<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"8843"</span><span class="tsd-signature-symbol"> = &quot;8843&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/ee6b80a/src/lib/conf/environment.ts#L9">lib/conf/environment.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/conf/environment.ts#L9">lib/conf/environment.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -121,7 +129,7 @@
 					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"1.0"</span><span class="tsd-signature-symbol"> = &quot;1.0&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/ee6b80a/src/lib/conf/environment.ts#L7">lib/conf/environment.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/conf/environment.ts#L7">lib/conf/environment.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -139,6 +147,15 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-class">
 						<a href="classes/lxd.html" class="tsd-kind-icon">Lxd</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/profileservice.html" class="tsd-kind-icon">Profile<wbr>Service</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/profile.html" class="tsd-kind-icon">Profile</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/project.html" class="tsd-kind-icon">Project</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="globals.html#api_base_url" class="tsd-kind-icon">API_<wbr>BASE_<wbr>URL</a>
@@ -164,6 +181,10 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
 				<li class="tsd-kind-property tsd-parent-kind-class"><span class="tsd-kind-icon">Property</span></li>
+				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 		</div>
 	</div>
