--- a/classes/lxd.html
+++ b/classes/lxd.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Lxd | js-lxd-api</title>
-	<meta name="description" content="Documentation for js-lxd-api">
+	<title>Lxd | jslxd</title>
+	<meta name="description" content="Documentation for jslxd">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">js-lxd-api</a>
+					<a href="../index.html" class="title">jslxd</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -97,21 +97,15 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Lxd<span class="tsd-signature-symbol">(</span>url<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="lxd.html" class="tsd-signature-type">Lxd</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Lxd<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="lxd.html" class="tsd-signature-type">Lxd</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/lxd.ts#L6">lib/lxd.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/jslxd.ts#L5">lib/jslxd.ts:5</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> url: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = API_BASE_URL</span></h5>
-								</li>
-							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="lxd.html" class="tsd-signature-type">Lxd</a></h4>
 						</li>
 					</ul>
@@ -125,7 +119,7 @@
 					<div class="tsd-signature tsd-kind-icon">profile<span class="tsd-signature-symbol">:</span> <a href="profileservice.html" class="tsd-signature-type">ProfileService</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/lxd.ts#L6">lib/lxd.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/jslxd.ts#L5">lib/jslxd.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
