--- a/globals.html
+++ b/globals.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>js-lxd-api</title>
-	<meta name="description" content="Documentation for js-lxd-api">
+	<title>jslxd</title>
+	<meta name="description" content="Documentation for jslxd">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">js-lxd-api</a>
+					<a href="index.html" class="title">jslxd</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -54,7 +54,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1>js-lxd-api</h1>
+			<h1>jslxd</h1>
 		</div>
 	</div>
 </header>
@@ -99,7 +99,7 @@
 					<div class="tsd-signature tsd-kind-icon">API_<wbr>BASE_<wbr>URL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &#x60;${scheme}://${host}:${port}/${version}&#x60;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/conf/environment.ts#L10">lib/conf/environment.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/conf/environment.ts#L10">lib/conf/environment.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -109,7 +109,7 @@
 					<div class="tsd-signature tsd-kind-icon">host<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"127.0.0.1"</span><span class="tsd-signature-symbol"> = &quot;127.0.0.1&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/conf/environment.ts#L8">lib/conf/environment.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/conf/environment.ts#L8">lib/conf/environment.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -119,7 +119,7 @@
 					<div class="tsd-signature tsd-kind-icon">port<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"8843"</span><span class="tsd-signature-symbol"> = &quot;8843&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/conf/environment.ts#L9">lib/conf/environment.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/conf/environment.ts#L9">lib/conf/environment.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -129,7 +129,7 @@
 					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"1.0"</span><span class="tsd-signature-symbol"> = &quot;1.0&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/conf/environment.ts#L7">lib/conf/environment.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/conf/environment.ts#L7">lib/conf/environment.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
