--- a/interfaces/profile.html
+++ b/interfaces/profile.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile | js-lxd-api</title>
-	<meta name="description" content="Documentation for js-lxd-api">
+	<title>Profile | jslxd</title>
+	<meta name="description" content="Documentation for jslxd">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">js-lxd-api</a>
+					<a href="../index.html" class="title">jslxd</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -97,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">config<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/models/profile.ts#L4">lib/models/profile.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/models/profile.ts#L4">lib/models/profile.ts:4</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -115,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/models/profile.ts#L3">lib/models/profile.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/models/profile.ts#L3">lib/models/profile.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -125,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">devices<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/models/profile.ts#L7">lib/models/profile.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/models/profile.ts#L7">lib/models/profile.ts:7</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -151,7 +151,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/models/profile.ts#L2">lib/models/profile.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/models/profile.ts#L2">lib/models/profile.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -161,7 +161,7 @@
 					<div class="tsd-signature tsd-kind-icon">used_<wbr>by<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/bjorntheart/js-lxd-api/blob/d9ac811/src/lib/models/profile.ts#L13">lib/models/profile.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/bjorntheart/jslxd/blob/4184021/src/lib/models/profile.ts#L13">lib/models/profile.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
